@@ -5,11 +5,11 @@ COPY conf conf
 COPY pom.xml pom.xml
 RUN mvn package -q
 
-FROM openjdk:23-jdk-slim
+FROM azul/zulu-openjdk:25
 WORKDIR /redkale
 COPY conf conf
 COPY --from=maven /redkale/target/redkale-benchmark-1.0.0.jar redkale-benchmark.jar
 
 EXPOSE 8080
 
-CMD ["java", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-DAPP_HOME=./", "-jar", "redkale-benchmark.jar"]
+CMD ["java", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+UseCompactObjectHeaders", "-DAPP_HOME=./", "-jar", "redkale-benchmark.jar"]
